--- a/PSW.BinarySave.csproj
+++ b/PSW.BinarySave.csproj
@@ -5,4 +5,8 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants></DefineConstants>
+  </PropertyGroup>
+
 </Project>
